logs/dag_id=stored_procedures/run_id=manual__2024-05-30T115637.288503+0000/task_id=update_driver_nationality/attempt=1.log
[2024-05-30T11:56:57.874+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-30T11:56:57.898+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: stored_procedures.update_driver_nationality manual__2024-05-30T11:56:37.288503+00:00 [queued]>
[2024-05-30T11:56:57.907+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: stored_procedures.update_driver_nationality manual__2024-05-30T11:56:37.288503+00:00 [queued]>
[2024-05-30T11:56:57.908+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 2
[2024-05-30T11:56:57.922+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): update_driver_nationality> on 2024-05-30 11:56:37.288503+00:00
[2024-05-30T11:56:57.930+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=683) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-30T11:56:57.932+0000] {standard_task_runner.py:63} INFO - Started process 685 to run task
[2024-05-30T11:56:57.931+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'stored_procedures', 'update_driver_nationality', 'manual__2024-05-30T11:56:37.288503+00:00', '--job-id', '288', '--raw', '--subdir', 'DAGS_FOLDER/dag_example.py', '--cfg-path', '/tmp/tmp4tm1z7ua']
[2024-05-30T11:56:57.934+0000] {standard_task_runner.py:91} INFO - Job 288: Subtask update_driver_nationality
[2024-05-30T11:56:57.981+0000] {task_command.py:426} INFO - Running <TaskInstance: stored_procedures.update_driver_nationality manual__2024-05-30T11:56:37.288503+00:00 [running]> on host 29c09f03cc50
[2024-05-30T11:56:58.078+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Yamin' AIRFLOW_CTX_DAG_ID='stored_procedures' AIRFLOW_CTX_TASK_ID='update_driver_nationality' AIRFLOW_CTX_EXECUTION_DATE='2024-05-30T11:56:37.288503+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-30T11:56:37.288503+00:00'
[2024-05-30T11:56:58.080+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-30T11:56:58.095+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-30T11:56:58.096+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/dag_example.py", line 99, in update_drivers_nationalities
    cur.execute("CALL update_drivers_nationality(%s);")
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 1: CALL update_drivers_nationality(%s);
                                        ^

[2024-05-30T11:56:58.109+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=stored_procedures, task_id=update_driver_nationality, execution_date=20240530T115637, start_date=20240530T115657, end_date=20240530T115658
[2024-05-30T11:56:58.125+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 288 for task update_driver_nationality (syntax error at or near "%"
LINE 1: CALL update_drivers_nationality(%s);
                                        ^
; 685)
[2024-05-30T11:56:58.146+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-30T11:56:58.171+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-30T11:56:58.174+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
